# ZK-Soul-vault

./: .gitignore  README.md  run-config.json
circuits/age-verification/: Cargo.toml
circuits/age-verification/src/: lib.rs
circuits/kyc-verification/: Cargo.toml
circuits/kyc-verification/examples/: generate_proof.rs
circuits/kyc-verification/src/: lib.rs
contracts/identity-vault/: Cargo.toml
contracts/identity-vault/src/: lib.rs
runtime/zk-verifier/: Cargo.toml
runtime/zk-verifier/src/: lib.rs
scripts/: build-all.sh  run-all.sh
