[package]
name = "identity-vault"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "ZK-verified identity vault smart contract"

[dependencies]
ink = { version = "4.0.0", default-features = false }
ink_env = { version = "4.0.0", default-features = false }
ink_storage = { version = "4.0.0", default-features = false }
ink_primitives = { version = "4.0.0", default-features = false }
ink_prelude = { version = "4.0.0", default-features = false }
scale = { version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }

[lib]
path = "src/lib.rs"
crate-type = [
    "cdylib",
    "rlib"
]

[features]
default = ["std"]
std = [
    "ink/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_primitives/std",
    "ink_prelude/std",
    "scale/std",
    "scale-info/std",
] 