[package]
name = "zk-verifier"
version = "0.1.0"
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
sp-core = { version = "18.0.0", default-features = false }
sp-runtime = { version = "31.0.0", default-features = false }
sp-std = { version = "6.0.0", default-features = false }
frame-support = { version = "31.0.0", default-features = false }
frame-system = { version = "31.0.0", default-features = false }
ark-bls12-381 = "0.4.0"
ark-groth16 = "0.4.0"
ark-serialize = "0.4.0"

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-std/std",
    "frame-support/std",
    "frame-system/std",
] 